[B]Version 1.4.0-dev[/B]
- Switched from FeedParser to BeautifulSoup for feed aggregation
- Thumbnail support once ChrisLAS adds them
- Various small fixes
- New show: FauxShow
- Added background fan art

[B]Version 1.3.0[/B]
- Moved to GitHub for version control
- New show: Live

[B]Version 1.2.0[/B]
- Switched to HD video
- Updated some of the show thumbnail images
- Fix for RSS feeds without enclosures

[B]Version 1.1.0[/B]
- New show: The MMOrgue
- New show: TechSNAP
- New show: SciByte

[B]Version 1.0.1[/B]
- Updated icon from freezy. Thanks freezy!

[B]Version 1.0.0[/B]
- Initial release