@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
+  <!-- Shows -->
   <string id="30000">Linux Action Show</string>
   <string id="30001">Beer Is Tasty</string>
   <string id="30002">STOked</string>
@@ -7,11 +8,18 @@
   <string id="30004">Jupiter@Nite</string>
   <string id="30005">Jupiter Files</string>
   <string id="30006">All Shows</string>
+  <string id="30013">All the latest videos from Jupiter Broadcasting.</string>
   <string id="30007">The MMOrgue</string>
   <string id="30008">TechSNAP</string>
   <string id="30009">SciByte</string>
   <string id="30010">Live Show</string>
-  <string id="30011">FauxShow</string>
   <string id="30012">Watch Jupiter Broadcasting live!</string>
-  <string id="30013">All the latest videos from Jupiter Broadcasting.</string>
+  <string id="30011">FauxShow</string>
+
+  <!-- Settings -->
+  <string id="30100">General</string>	
+	<string id="30101">Video Quality</string>
+	<string id="30102">High</string>
+	<string id="30103">Low</string>
+
 </strings>
