@@ -4,6 +4,7 @@
 - Various small fixes
 - New show: FauxShow
 - Added background fan art
+- Configurable video quality
 
 [B]Version 1.3.0[/B]
 - Moved to GitHub for version control
